@@ -1,6 +1,6 @@
-MD5 5016a5de309831a54a8802e3380323fc ChangeLog 3019
+MD5 24ede3d96990dfa7fb4f65ef26b99ddc ChangeLog 3046
 MD5 c16d922f240825a275d3d119388fdf59 gkrellmms-0.5.6.ebuild 675
-MD5 9926ed84aea5122c3a5ba7b4502b3b96 gkrellmms-0.5.8.ebuild 667
+MD5 eee3d9d471a3833a5b9b69c0475f0ad7 gkrellmms-0.5.8.ebuild 667
 MD5 eb378533b152388eb5e935e97f3415e5 gkrellmms-2.1.2.ebuild 687
 MD5 171dcd1d92a887b478f2f8d84747ee8b gkrellmms-2.1.6.ebuild 690
 MD5 27c2de7c71e69bfbb46fb54f678487de gkrellmms-2.1.12.ebuild 691
