@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellmms/Attic/gkrellmms-0.5.8.ebuild,v 1.3 2003/02/13 17:25:18 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellmms/Attic/gkrellmms-0.5.8.ebuild,v 1.4 2003/07/16 16:36:12 mholzer Exp $
 
 S=${WORKDIR}/${PN}
 DESCRIPTION="A sweet plugin to controll xmms from gkrellm"
@@ -12,7 +12,7 @@ DEPEND=">=app-admin/gkrellm-1.2*
 
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="~x86 ~ppc ~sparc "
+KEYWORDS="x86 ~ppc ~sparc "
 
 src_compile() {
 	emake || die
