@@ -1,8 +1,9 @@
 # ChangeLog for x11-plugins/gkrellmms
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellmms/Attic/ChangeLog,v 1.15 2003/07/16 16:33:39 mholzer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellmms/Attic/ChangeLog,v 1.16 2003/07/16 16:36:12 mholzer Exp $
 
-  17 Jul 2003; Martin Holzer <mholzer@gentoo.org> gkrellmms-2.1.12.ebuild:
+  17 Jul 2003; Martin Holzer <mholzer@gentoo.org> gkrellmms-2.1.12.ebuild,
+  gkrellmms-0.5.8.ebuild :
   Marked x86 stable.
 
 *gkrellmms-2.1.12 (25 Jun 2003)
